@@ -46,7 +46,7 @@ namespace Astroid {
       ptree config;
       ptree notmuch_config;
 
-      const int CONFIG_VERSION = 4;
+      const int CONFIG_VERSION = 5;
 
     private:
       ptree setup_default_config (bool);
