@@ -98,6 +98,7 @@ namespace Astroid {
     builder->get_widget ("encryption_revealer", encryption_revealer);
 
     builder->get_widget ("editor_box", editor_box);
+    builder->get_widget ("switch_signature", switch_signature);
     /*
     builder->get_widget ("editor_rev", editor_rev);
     builder->get_widget ("thread_rev", thread_rev);
@@ -206,6 +207,11 @@ namespace Astroid {
 
     /* editor->start_editor_when_ready = true; */
 
+    switch_signature->property_active().signal_changed ().connect (
+        sigc::mem_fun (*this, &EditMessage::switch_signature_set));
+
+    reset_signature ();
+
     /* register keys {{{ */
     keys.title = "Edit mode";
     keys.register_key (Key (GDK_KEY_Return), { Key (GDK_KEY_KP_Enter) },
@@ -248,10 +254,13 @@ namespace Astroid {
         [&] (Key) {
           /* cycle through from combo box */
           if (!message_sent && !sending_in_progress.load()) {
-            int i = from_combo->get_active_row_number ();
-            if (i >= (static_cast<int>(from_store->children().size())-1)) i = 0;
-            else i++;
-            from_combo->set_active (i);
+            if (from_store->children().size() > 1) {
+              int i = from_combo->get_active_row_number ();
+              if (i >= (static_cast<int>(from_store->children().size())-1)) i = 0;
+              else i++;
+              from_combo->set_active (i);
+              reset_signature ();
+            }
           }
 
           return true;
@@ -311,6 +320,18 @@ namespace Astroid {
           return true;
         });
 
+
+    keys.register_key ("S", "edit_message.toggle_signature",
+        "Toggle signature",
+        [&] (Key) {
+          auto iter = from_combo->get_active ();
+          auto row = *iter;
+          Account * a = row[from_columns.account];
+          if (a->has_signature) {
+            switch_signature->set_state (!switch_signature->get_active ());
+          }
+          return true;
+        });
 
     // }}}
   } // }}}
@@ -472,19 +493,43 @@ namespace Astroid {
 
   void EditMessage::set_from (Address a) {
     if (!accounts->is_me (a)) {
-      cerr << "em: from address is not a defined account." << endl;
+      log << error << "em: from address is not a defined account." << endl;
     }
 
     set_from (accounts->get_account_for_address (a));
   }
 
   void EditMessage::set_from (Account * a) {
+    int rn = from_combo->get_active_row_number ();
+
     for (Gtk::TreeRow row : from_store->children ()) {
       if (row[from_columns.account] == a) {
         from_combo->set_active (row);
         break;
       }
     }
+
+    bool same_account = (rn == from_combo->get_active_row_number ());
+    log << debug << "same account: " << same_account << endl;
+    if (!same_account) {
+      reset_signature ();
+    }
+  }
+
+  void EditMessage::reset_signature () {
+    /* should not be run unless the account has been changed */
+    auto it = from_combo->get_active ();
+    Account * a = (*it)[from_columns.account];
+
+    switch_signature->set_sensitive (a->has_signature);
+    switch_signature->set_state (a->has_signature && a->signature_default_on);
+  }
+
+
+  void EditMessage::switch_signature_set () {
+    log << debug << "got sig: " << switch_signature->get_active () << endl;
+    prepare_message ();
+    read_edited_message ();
   }
 
   void EditMessage::read_edited_message () {
@@ -761,24 +806,6 @@ namespace Astroid {
 
     ComposeMessage * c = new ComposeMessage ();
 
-    /*
-    auto iter = from_combo->get_active ();
-    if (!iter) {
-      log << error << "em: error: no from account selected." << endl;
-      return NULL;
-    }
-    c->set_id (msg_id);
-    auto row = *iter;
-    c->set_from (row[from_columns.account]);
-    c->set_to (to);
-    c->set_cc (cc);
-    c->set_bcc (bcc);
-    c->set_subject (subject);
-
-    tmpfile.open (tmpfile_path.c_str(), fstream::in);
-    c->body << tmpfile.rdbuf();
-    tmpfile.close ();
-    */
     c->load_message (msg_id, tmpfile_path.c_str());
 
     c->set_references (references);
@@ -786,6 +813,12 @@ namespace Astroid {
 
     for (shared_ptr<ComposeMessage::Attachment> a : attachments) {
       c->add_attachment (a);
+    }
+
+    if (c->account->has_signature && switch_signature->get_active ()) {
+      c->include_signature = true;
+    } else {
+      c->include_signature = false;
     }
 
     c->build ();
